<resources>
    <string name="app_name">معاون</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="login">تسجيل الدخول</string>
    <string name="new_account">هل تريد فتح حساب جديد؟ اضغط هنا</string>
    <string name="الإيميل">إيميل</string>
    <string name="كلمة">كلمة السر</string>
    <string name="تحقق">أعد كتابة كلمة السر</string>
    <string name="logo_of_application">شعار</string>
    <string name="Sign_up">إنشاء الحساب</string>
    <string name="Have_account">هل لديك حساب بالفعل؟ اضغط هنا</string>
    <string name="username">   الأسم</string>
    <string name="address">   العنوان</string>
    <string name="yes">نعم</string>
    <string name="no">لا</string>
    <string name="automatic_order">الطلب التلقائي؟</string>
    <string name="save">حفظ</string>
    <string name="mobile">رقم الجوال</string>
    <string name="Auto_order">هل تريد أن يتم الطلب بشكل تلقائي؟</string>
    <string name="order_day">يوم الطلب التلقائي</string>
    <string name="توصيل_الطلب">توصيل-الطلب</string>
    <string name="قبول_الطلب">قبول-الطلب</string>
    <string name="الطلب_مرسل">الطلب-مرسل</string>
    <string name="الطلب">الطلب</string>
    <string name="رقم_الطلب">رقم-الطلب</string>
    <string name="ordersend">الطلب مرسل</string>
    <string name="orderaccepted">قبول الطلب</string>
    <string name="orderdeliverd">توصيل الطلب</string>
    <string name="order">رقم الطلب</string>
    <string name="prepareNow">تحضير الطلب</string>
    <string name="total">اجمالي السعر</string>
    <string name="hasdeliverd">تم التوصيل</string>
    <string name="sent">تم ارسال الطلب</string>
    <string name="quantity">الكمية</string>
    <string name="barcode">أكتب شريط المنتج أو قم بمسحه</string>
    <string name="itemname">أسم المنتج</string>
    <string name="item_size">الحجم</string>
    <string name="item_brand">الشركة</string>
    <string name="Date">تاريخ الأنتهاء</string>
    <string name="numsensor">رقم المستشعر</string>
    <string name="potonthesensor"> ضع المنتج على المستشعر ثم أضغط موافق</string>
    <string name="ok">موافق</string>
    <string name="QR">"أمسح الشريط الذي أسفل الميزان "</string>

</resources>