<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#16121111">

    <ImageView
        android:id="@+id/register_icon"
        android:layout_width="173dp"
        android:layout_height="176dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:contentDescription="@string/logo_of_application"
        app:srcCompat="@drawable/logo24" />


    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_below="@+id/register_icon"
        android:layout_marginTop="64dp"
        android:autofillHints=""
        android:background="@drawable/inputs"
        android:drawableEnd="@drawable/email"
        android:ems="10"
        android:hint="@string/الإيميل"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_below="@+id/register_email"
        android:layout_marginTop="5dp"
        android:background="@drawable/inputs"
        android:drawableEnd="@drawable/password"
        android:ems="10"
        android:gravity="end"
        android:hint="@string/كلمة"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="10dp"
        android:drawableRight="@drawable/password" />

    <EditText
        android:id="@+id/Confirmation_password"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_below="@+id/register_password"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="255dp"
        android:background="@drawable/inputs"
        android:drawableEnd="@drawable/password"
        android:ems="10"
        android:gravity="end"
        android:hint="@string/تحقق"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="10dp"
        tools:ignore="RtlCompat"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="451dp"
        android:layout_marginBottom="154dp"
        android:background="@drawable/buttons"
        android:padding="15dp"
        android:text="@string/Sign_up"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Have_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="106dp"
        android:gravity="center"
        android:text="@string/Have_account"
        android:textColor="#8F0C0C0C"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>