<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#16121111"
    tools:context=".Setup">


    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="9dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="115dp"
        android:background="@drawable/inputs"
        android:ems="10"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textAlignment="center"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/user_mobile"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="231dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="115dp"
        android:background="@drawable/inputs"
        android:ems="10"
        android:hint="@string/mobile"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAlignment="center"
        android:textAllCaps="true"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/user_address"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="315dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="115dp"
        android:background="@drawable/inputs"
        android:ems="10"
        android:hint="@string/address"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textAlignment="center"
        android:textAllCaps="true"
        tools:ignore="RtlCompat" />


    <Button
        android:id="@+id/buttonSave"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="451dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="97dp"
        android:background="@drawable/buttons"
        android:padding="15dp"
        android:text="@string/save"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/Auto_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="260dp"
        android:text="@string/Auto_order"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/Auto_order_RadioGroup"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="254dp"
        android:layout_toStartOf="@+id/Auto_order"
        android:gravity="end"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/Auto_order_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/Auto_order"
            android:text="@string/no" />

        <RadioButton
            android:id="@+id/Auto_order_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@+id/Auto_order"
            android:text="@string/yes"
            android:textAlignment="gravity" />
    </RadioGroup>

    <TextView
        android:id="@+id/order_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="190dp"
        android:text="@string/order_day"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/Spinner_order_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="145dp"
        android:layout_marginEnd="71dp"
        android:layout_marginBottom="188dp"
        android:layout_toStartOf="@+id/order_day" />


</RelativeLayout>