<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgrund2"
    tools:context=".Customer_ststus">


    <LinearLayout
        android:id="@+id/layoutToolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/holo_green_dark"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="تفاصيل الطلب"
            android:textColor="@color/colorTextPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorLableBackground"
        app:layout_constraintBottom_toTopOf="@id/vieoDivider"
        app:layout_constraintTop_toBottomOf="@id/layoutToolbar" />

    <TextView
        android:id="@+id/textOrderNumber"
        android:layout_width="155dp"
        android:layout_height="30dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="637dp"
        android:gravity="center"
        android:text="@string/order"
        android:textAllCaps="true"
        android:textColor="@color/colorTextPrimary"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textOrder"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="97dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="611dp"
        android:gravity="center_horizontal"
        android:textColor="@color/colorTextPrimary"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/vieoDivider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorTextPrimary"
        app:layout_constraintTop_toBottomOf="@id/textOrderNumber"
        tools:layout_editor_absoluteX="16dp" />

    <View
        android:id="@+id/viewOrderdeliverd"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginStart="337dp"
        android:layout_marginTop="603dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="110dp"
        android:background="@drawable/shape_status_remaining"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/viewOrderPrepare"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginStart="268dp"
        android:layout_marginTop="602dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="111dp"
        android:background="@drawable/shape_status_remaining"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/viewOrderplaced"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginStart="129dp"
        android:layout_marginTop="602dp"
        android:layout_marginEnd="264dp"
        android:layout_marginBottom="111dp"
        android:background="@drawable/shape_status_remaining"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageOrderPlaced"
        android:layout_width="43dp"
        android:layout_height="26dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="621dp"
        android:layout_marginEnd="252dp"
        android:layout_marginBottom="84dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/placed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageOrderremaining"
        android:layout_width="84dp"
        android:layout_height="24dp"
        android:layout_marginStart="167dp"
        android:layout_marginTop="620dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="87dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/preparing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textPrepareNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="251dp"
        android:layout_marginTop="648dp"
        android:layout_marginEnd="110dp"
        android:layout_marginBottom="69dp"
        android:text="@string/orderdeliverd"
        android:textColor="@color/colorTextPrimary"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageOrderdeliverd"
        android:layout_width="81dp"
        android:layout_height="26dp"
        android:layout_marginStart="301dp"
        android:layout_marginTop="622dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="83dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/has_deliverd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textorderPlaced"
        android:layout_width="64dp"
        android:layout_height="13dp"

        android:layout_marginStart="103dp"
        android:layout_marginTop="648dp"
        android:layout_marginEnd="244dp"
        android:layout_marginBottom="70dp"
        android:text="@string/sent"
        android:textColor="@color/colorTextPrimary"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textOrderPreparing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="646dp"
        android:layout_marginEnd="181dp"
        android:layout_marginBottom="71dp"
        android:text="@string/prepareNow"
        android:textColor="@color/colorTextPrimary"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textOrderD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="325dp"
        android:layout_marginTop="646dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="71dp"
        android:text="@string/hasdeliverd"
        android:textColor="@color/colorTextPrimary"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/view1"
        android:layout_width="50dp"
        android:layout_height="1dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="610dp"
        android:layout_marginEnd="213dp"
        android:layout_marginBottom="120dp"
        android:background="@color/colorTextSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="50dp"
        android:layout_height="1dp"
        android:layout_marginStart="217dp"
        android:layout_marginTop="611dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="119dp"
        android:background="@color/colorTextSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:id="@+id/view3"
        android:layout_width="50dp"
        android:layout_height="1dp"
        android:layout_marginStart="287dp"
        android:layout_marginTop="611dp"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="119dp"
        android:background="@color/colorTextSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/viewOrderRemaining"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginStart="199dp"
        android:layout_marginTop="602dp"
        android:layout_marginEnd="194dp"
        android:layout_marginBottom="111dp"
        android:background="@drawable/shape_status_remaining"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imagePrepareNow"
        android:layout_width="116dp"
        android:layout_height="26dp"
        android:layout_marginStart="217dp"
        android:layout_marginTop="622dp"
        android:layout_marginEnd="78dp"
        android:layout_marginBottom="83dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/deliver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/list"
        android:layout_width="wrap_content"
        android:layout_height="359dp"
        android:layout_marginTop="137dp"
        android:layout_marginBottom="235dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="507dp"
        android:layout_marginEnd="166dp"
        android:layout_marginBottom="205dp"
        android:text="@string/total"
        android:textColor="@color/colorTextPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="211dp"
        android:layout_marginTop="526dp"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="186dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>